fix: fixed some spacings

--- a/components/MembersCompanies/MembersCompanies.module.css
+++ b/components/MembersCompanies/MembersCompanies.module.css
@@ -25,9 +25,13 @@
 	align-items: center;
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 800px) {
 	#headingText {
 		font-size: 18px;
+	}
+
+	.companyCard {
+		justify-content: center;
 	}
 }
 
